deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app-service
spec:
  selector:
    app: custom-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
    - name: metrics
      port: 8000
      targetPort: 5000
